--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ css: assets/index.css
 
 ::: {.g-col-8}
 
-![Workshop 1 sticker](assets/images/sticker_workshop_1.svg){#fig-ref width="300px"} 
+![Workshop 1 sticker](assets/images/durban_workshop_stickers_front_page.png){#fig-ref width="50%"} 
 
 :::
 
