Adding teaching team information

--- a/about.qmd
+++ b/about.qmd
@@ -10,6 +10,51 @@ sidebar: false
 ## Teaching Team
 
 
+**Scott Handley, PhD**
+Associate Professor 
+Washington University School of Medicine 
+Department of Pathology and Immunology 
+shandley@wustl.edu 
+
+**Joseph Elsherbini, PhD**
+Data Scientist 
+Ragon Institute of MGH, MIT and Harvard 
+jelsherbini@mgh.harvard.edu 
+
+**Chandani Desai**
+Project Manager 
+Ragon Institute of MGH, MIT and Harvard 
+cdesai@mgh.harvard.edu 
+
+**San Emmanuel James**
+(Title)
+University of KwaZulu Natal 
+(Email)
+
+**Marothi Letsoalo**
+(Title)
+University of KwaZulu Natal 
+(Email)
+
+**Laura Symul** 
+(Title)
+Stanford University
+(Email)
+
+**Lenine Liebenberg**
+(Title)
+CAPRISA
+(Email)
+
+**Salina Hussain**
+Research Technician II
+Ragon Institute of MGH, MIT and Harvard 
+SHUSSAIN0@mgh.harvard.edu
+
+**Suuba Demby**
+Research Technician II
+Ragon Institute of MGH, MIT and Harvard 
+suubademby@college.harvard.edu
 
 ## About these materials
 
