--- a/materials/2-r-rstudio-quarto/1-welcome-to-quarto/exercise_1.qmd
+++ b/materials/2-r-rstudio-quarto/1-welcome-to-quarto/exercise_1.qmd
@@ -47,24 +47,24 @@ title: "Exploring Data for Patterns"
 These datasets contains 10 cancer samples. @tbl-1 describes the mutational status for a set of genes (A-E) and whether a mutation if absent (0) or present (1). @tbl-2 summarizes the expression levels of those genes, ranging from no expression (0) to high expression (3). 
 
  
-|      |  1   |  2   |  3   |  4   |  5   |  6   |  7   |  8   |  9   |  10   |
+|   sample ->   |  1   |  2   |  3   |  4   |  5   |  6   |  7   |  8   |  9   |  10   |
 |------|------|------|------|------|------|------|------|------|------|------|
-| A    | 0    | 0    | 0    | 0    | 0    | 1    | 0    | 0    | 0    | 0    |
-| B    | 0    | 0    | 0    | 0    | 1    | 1    | 1    | 0    | 1    | 1    |
-| C    | 0    | 0    | 1    | 0    | 0    | 0    | 1    | 1    | 1    | 1    |
-| D    | 1    | 1    | 0    | 0    | 1    | 1    | 0    | 0    | 0    | 0    |
-| E    | 0    | 1    | 1    | 0    | 1    | 0    | 0    | 0    | 1    | 0    |
-: Mutational status for a set of genes {#tbl-1}
+| **Gene A**    | 0    | 0    | 0    | 0    | 0    | 1    | 0    | 0    | 0    | 0    |
+| **Gene B**    | 0    | 0    | 0    | 0    | 1    | 1    | 1    | 0    | 1    | 1    |
+| **Gene C**    | 0    | 0    | 1    | 0    | 0    | 0    | 1    | 1    | 1    | 1    |
+| **Gene D**    | 1    | 1    | 0    | 0    | 1    | 1    | 0    | 0    | 0    | 0    |
+| **Gene E**    | 0    | 1    | 1    | 0    | 1    | 0    | 0    | 0    | 1    | 0    |
+: Mutational status for a set of genes {#tbl-1 .striped .table-bordered .table-sm}
 
  
-|      |  1   |  2   |  3   |  4   |  5   |  6   |  7   |  8   |  9   |  10   |
+|   sample ->   |  1   |  2   |  3   |  4   |  5   |  6   |  7   |  8   |  9   |  10   |
 |------|------|------|------|------|------|------|------|------|------|------|
-| A    | 2    | 1    | 1    | 2    | 2    | 0    | 2    | 1    | 1    | 2    |
-| B    | 1    | 1    | 2    | 1    | 0    | 0    | 0    | 2    | 0    | 0    |
-| C    | 1    | 1    | 3    | 1    | 2    | 2    | 3    | 0    | 3    | 0    |
-| D    | 0    | 0    | 2    | 1    | 3    | 3    | 2    | 1    | 1    | 1    |
-| E    | 1    | 3    | 3    | 1    | 3    | 1    | 2    | 1    | 3    | 2    |
-: Expression levels for a set of genes {#tbl-2}
+| **Gene A**    | 2    | 1    | 1    | 2    | 2    | 0    | 2    | 1    | 1    | 2    |
+| **Gene B**    | 1    | 1    | 2    | 1    | 0    | 0    | 0    | 2    | 0    | 0    |
+| **Gene C**    | 1    | 1    | 3    | 1    | 2    | 2    | 3    | 0    | 3    | 0    |
+| **Gene D**    | 0    | 0    | 2    | 1    | 3    | 3    | 2    | 1    | 1    | 1    |
+| **Gene E**    | 1    | 3    | 3    | 1    | 3    | 1    | 2    | 1    | 3    | 2    |
+: Expression levels for a set of genes {#tbl-2 .striped .table-bordered .table-sm}
 
 
 
