--- a/materials/1-workshop1/2-intro-to-r/slides.qmd
+++ b/materials/1-workshop1/2-intro-to-r/slides.qmd
@@ -2,17 +2,14 @@
 title: "Intro to R,R Studio, and Quarto"
 subtitle: "Slides remixed from Andrew P. Bray and Claus O. Wilke"
 format: qmdrslides-revealjs
+editor_options: 
+  chunk_output_type: inline
 ---
 
 ```{r}
 #| echo: false
 library(countdown)
 ```
-
-# About the Workshop
-::: {footer}
-Slides remixed from Andrew P. Bray and Claus O. Wilke
-:::
 
 ## {data-menu-title="Website Link" style="text-align: center"}
 
@@ -45,14 +42,14 @@ Workshop materials are at:
 
 Ask questions at **#workshop-questions** on [https://discord.gg/UDAsYTzZE](https://discord.gg/UDAsYTzZE).
 
-![](images/discord.png){fig-alt="Screenshot of the discord server app that serves as the forum for the workshop." fig-align="center" width="546"}
+![](images/discord_durban.png){fig-alt="Screenshot of the discord server app that serves as the forum for the workshop." fig-align="center" width="546"}
 
 ## Stickies
 
 :::{layout="[[4, 5, 1]]" layout-valign=center}
 ![](images/sticky.jpeg){fig-alt="Picture of a laptop with a red sticky note stuck to the top." width=540}
 
-During an activity, place a [**blue**]{style="color: blue"} sticky on your laptop if you're good to go and a [**red**]{style="color: red"} sticky if you want help.
+During an activity, place a [**blue**]{style="color: DarkTurquoise"}  sticky on your laptop if you're good to go and a [**pink**]{style="color: hotpink"} sticky if you want help.
 :::
 
 :::footer
@@ -60,19 +57,13 @@ Image by [Megan Duffy](https://dynamicecology.wordpress.com/2015/01/13/sticky-no
 :::
 
 ## Practicalities
+:::{.r-fit-text}
+WiFi:
 
+Network: CAPRISA-Corp
 
-:::{.columns style="font-size: .7em"}
-:::{.column width=50%}
-
-- WiFi:
-  - Network: CAPRISA-Corp
-  - Password: corp@caprisa17
-
+Password: corp@caprisa17
 :::
-:::
-
-
 
 ---
 
@@ -244,6 +235,102 @@ Windows, Mac or Linux OS: https://www.r-project.org
 
 :::::
 
+# RStudio
+
+## What are the parts of RStudio?
+
+## The text editor
+
+## The console
+
+## The right panes
+
+# Let's start programming
+
+## What is programming?
+
+Programming is giving the computer instructions using text. The tricky part is learning how to speak to a computer.
+
+:::{layout="[0.25,0.25,0.25]"}
+:::{#column1 .fragment}
+1. Computers are incredibly literal
+
+```{r}
+#| echo: fenced
+"a" == "A"
+```
+:::
+:::{#column2 .fragment}
+2. Computers care about punctuation
+
+```{r error=TRUE}
+#| echo: fenced
+
+max(c(1,2,3,4)]
+```
+:::
+:::{#column3 .fragment}
+3. Computers only know what you tell them
+
+```{r error=TRUE}
+#| echo: fenced
+# how old will I be in 10 years?
+my_age + 10
+
+```
+:::
+:::
+
+[Most bugs happen because of one of these things.]{style="color: red;font-size: 1.2em" .fragment}
+
+
+## What is programming?
+
+So why bother at all? Because if you can tell a computer how to do it once, it is reproducible!
+
+[If the data changes or you find a mistake, just rerun!]{style="color: green;font-size: 1.2em" .fragment}
+
+[You can run the same code on new data]{style="color: green;font-size: 1.2em" .fragment}
+
+[You can share your code with others so they can start where you left off]{style="color: green;font-size: 1.2em" .fragment}
+
+
+## Let's use R for math {.your-turn}
+
+```{r}
+#| echo: false
+countdown::countdown(3)
+```
+
+In the console, try typing some commands:
+
+```{r}
+#| echo: true
+#| eval: false
+
+# arithmetic
+3 + 5 + 10
+10 * (5 + 1)
+3**2 # what does the ** operator do in R?
+# check inequalities and equalities
+4 >= 1 # what does this mean?
+5 + 4 == 9
+# make some errors
+"3" + 5 # why is this an error?
+my_age + 5  # why is this an error?
+
+# write a math expression to calculate what percentage
+# of your life has been in post-secondary school/training
+# (university, training programs, masters, PhD)
+```
+
+
+## Say hello to the text-editor
+
+When you write code in the console, it is gone.
+
+It is better to work inside quarto notebooks in order to be able to save and share your code and results.
+
 # What can you do with Quarto?
 
 
@@ -282,10 +369,13 @@ Windows, Mac or Linux OS: https://www.r-project.org
 
 ## Quarto Render
 
+**Quarto is integrated into RStudio**
+
+   Click ![](images/render-icon.png){fig-alt="small icon of render arrow" width="100"} in Editor pane of RStudio.
+
 Render input file to various document formats.
 
 ::: {layout="[[1, 1, 1, 1]]" style="font-size: .7em; text-align: center"}
-\
 
 ### Input
 
@@ -304,765 +394,77 @@ Render input file to various document formats.
 -   and many more!
 
 \
+
+\
 :::
-
-
-## Three ways to render
-
-. . .
-
-1. **Quarto is integrated into RStudio**
-
-   Click ![](images/render-icon.png){fig-alt="small icon of render arrow" width="100"} in Editor pane of RStudio.
-
-. . .
-
-2. **Quarto is an R package**
-
-   Run in R:
-
-   ```r
-   quarto::quarto_render(input = ___, output_format = ___)
-   ```
-
-. . .
-
-3. **Quarto has a command line interface (CLI)**
-
-   Run at the terminal:
-
-   ```bash
-   quarto render <input> --to <format>
-   ```
 
 # Anatomy of a Document
 
-1. Metadata
+1. Code Cells
 2. Text
-3. Code Cells
+3. Metadata
 
-# Metadata
 
-## [Metadata:]{.meta-el} YAML
+# Code Chunks
 
-"Yet Another Markup Language" or "YAML Ain't Markup Language" is used to provide document level metadata ...
 
-:::columns
-
-:::{.column width=10%}
-:::
-
-:::{.column width=50%}
-[... in key-value pairs,]{.fragment}
-
-[... that can nest,]{.fragment}
-
-[... are fussy about indentation,]{.fragment}
-
-[... and are kept between `---`.]{.fragment}
-
-:::
-
-:::{.column width=40% .fragment}
-
-\
-
-``` yaml
----
-format: 
-  title: "Intro to R,R Studio, and Quarto"
-  html:
-    toc: true
-    code-fold: true
----
-```
-:::
-
-:::
-
-
-# Text
-
-[The Elements of Markdown]{style="font-family: 'Nanum Myeongjo', serif; font-size:1.7em"}
-
-##  {data-menu-title="Markdown"}
-
-::: {style="font-size: 4em; text-align: center; color: green"}
-{{< fa brands markdown >}}
-:::
-
--   Markdown is designed to be easy to write and easy to read:
-
-    > A Markdown-formatted document should be publishable as-is, as plain text, without looking like it's been marked up with tags or formatting instructions.\
-    > -John Gruber
-
-. . .
-
-- Quarto uses extended version of **Pandoc markdown**.
-- Pandoc classifies markdown in terms of [Inline]{.inline-el} and [Block]{.block-el} elements.
-
-
-## [Inline Elements:]{.inline-el} Text Formatting
-
-::: columns
-::: {.column width="65%"}
-#### Markdown
-
-```{.markdown}
-Markdown allows you to format text
-with *emphasis* and **strong emphasis**.
-You can also add superscripts^2^, 
-subscripts~2~, and display code 
-`verbatim`. Little known fact: you can 
-also ~~strikethrough~~ text and present
-it in [small caps]{.smallcaps}.
-```
-:::
-
-::: {.column width="35%" .fragment}
-#### Output
-
-Markdown allows you to format text with *emphasis* and **strong emphasis**. You can also add superscripts^2^, subscripts~2~, and display code `verbatim`. Little known fact: you can also ~~strikethrough~~ text and present it in [small caps]{.smallcaps}.
-:::
-:::
-
-::: footer
-^[Either the `*` or `_` can be used for emphasis and strong.]
-:::
-
-## [Inline Elements:]{.inline-el} Math
-
-::: columns
-::: {.column width="65%"}
-#### Markdown
-
-```markdown
-The area of a circle is $A = \pi r^2$,
-where $r$ is the radius and $\pi$ is
-the constant $3.141592\ldots$.
-```
-:::
-
-::: {.column width="35%" .fragment}
-#### Output
-
-The area of a circle is $A = \pi r^2$, where $r$ is the radius and $\pi$ is the constant $3.141592\ldots$.
-:::
-:::
-
-. . .
-
-\
-
-\
-
-<!-- :::{style="font-size: .8em"} -->
->TeX math lives between two `$`. Opening `$` must have a non-space character immediately to its right, while the closing `$` must have a non-space character immediately to its left, and must not be followed immediately by a digit.
->
-> -- the Pandoc Docs
-<!-- ::: -->
-
-
-## [Block Elements:]{.block-el} Math
-
-::: columns
-::: {.column width="50%"}
-#### Markdown
-
-```markdown
-A larger equation:
-
-$$
-f(x)={\sqrt{\frac{\tau}{2\pi}}}
-      e^{-\tau (x-\mu )^{2}/2}
-$$
-
-This breaks it:
-
-$$
-
-\bar{x} = \sum_{i=i}^n x_1
-$$
-```
-:::
-
-::: {.column width="50%" .fragment}
-#### Output
-
-A larger equation:
-
-$$
-f(x)=\sqrt{\frac{\tau}{2\pi}}
-    e^{-\tau (x-\mu )^{2}/2}
-$$
-
-This breaks it:
-
-$$
-
-\bar{x} = \sum_{i=i}^n x_1
-$$
-
-:::{.fragment}
-> For "display" math, use `$$` delimiters.
-:::
-
-:::
-:::
-
-## [Inline Elements:]{.inline-el} Links and Images
-
-#### Markdown
-
-```markdown
-You can embed [links with names](https://quarto.org/), direct urls
-like <https://quarto.org/>, and links to 
-[other places](#inline-elements-text-formatting) in the document. 
-The syntax is similar for embedding an inline image:
-![render icon](images/render-icon.png).
-```
-
-\
-
-:::{.fragment}
-#### Output
-
-You can embed [links with names](https://quarto.org/), direct urls like <https://quarto.org/>, and links to [other places](#inline-elements-text-formatting) in the document. The syntax is similar for embedding an inline image: ![render icon](images/render-icon.png){fig-alt="small icon of render arrow" width="100"}.
-:::
-
-
-## [Inline Elements:]{.inline-el} Footnotes
-
-::: columns
-::: {.column width="65%"}
-#### Markdown
-
-```{.markdown}
-A short note.^[Fits inline.]
-```
-:::
-
-::: {.column width="35%" .fragment}
-#### Output
-
-A short note.^[Fits inline.]
-:::
-:::
-
-. . .
-
-\
-
-::: columns
-::: {.column width="65%"}
-
-```{.markdown}
-A longer footnote[^9]
-
-[^9]:  Can be placed in a separate block.
-The id can be any alphanumeric string.
-```
-:::
-
-::: {.column width="35%" .fragment}
-A longer footnote[^9]
-
-[^9]: Can be placed in a
-separate block. The id can be any
-alphanumeric string.
-
-:::
-:::
-
-. . .
-
-> Placement of the actual footnote depends on the format: end of page for pdf, end of doc for HTML, bottom of slide for presentations.
-
-## [Block Elements:]{.block-el} Paragraph
-
-One or more lines of text followed by one or more blank lines.
-
-::: columns
-::: {.column width="50%"}
-#### Markdown
-
-```markdown
-Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
-
-Sed do eiusmod tempor.
-```
-:::
-
-::: {.column width="50%" .fragment}
-#### Output
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-Sed do eiusmod tempor.
-:::
-:::
-
-. . .
-
-\
-
-Without the blank line, the line break is treated as a space.
-
-::: columns
-::: {.column width="50%"}
-```markdown
-Lorem ipsum dolor sit amet,
-sconsectetur adipiscing elit.
-Sed do eiusmod tempor.
-```
-:::
-
-::: {.column width="50%}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Sed do eiusmod tempor.
-:::
-:::
-
-## [Block Elements:]{.block-el} Headers
-
-+---------------------+-----------------------------------+
-| Markdown Syntax     | Output                            |
-+=====================+===================================+
-|     # Header 1      | # Header 1 {.heading-output}      |
-+---------------------+-----------------------------------+
-|     ## Header 2     | ## Header 2 {.heading-output}     |
-+---------------------+-----------------------------------+
-|     ### Header 3    | ### Header 3 {.heading-output}    |
-+---------------------+-----------------------------------+
-|     #### Header 4   | #### Header 4 {.heading-output}   |
-+---------------------+-----------------------------------+
-|     ##### Header 5  | ##### Header 5 {.heading-output}  |
-+---------------------+-----------------------------------+
-|     ###### Header 6 | ###### Header 6 {.heading-output} |
-+---------------------+-----------------------------------+
-
-## [Block Elements:]{.block-el} Lists
-
-Can use `*`, `-`, or `+` may be used for unordered list items.
-
-:::columns
-:::{.column width=30%}
-#### Markdown
-```{.markdown}
-Unordered list:
-
-* red
-* green
-* blue
-
-Ordered list:
-
-1. red
-1. green
-3. blue
-```
-:::
-
-:::{.column width=30%}
-#### Output
-
-:::{style="font-size: .8em"}
-Unordered list:
-
-* red
-* green
-* blue
-
-Ordered list:
-
-1. red
-1. green
-3. blue
-:::
-:::
-
-:::{.column width=40%}
-\
-Pandoc gives you a lot of control over lists, including *nesting*, *fancy lists*, *definition lists*, *blocks in lists*, and *example lists*.
-:::
-:::
-
-:::aside
-Read the docs for details: <https://pandoc.org/MANUAL.html#pandocs-markdown>
-:::
-
-## {menu-title="List Poll"}
-
-:::poll
-{{< fa brands discord >}} Which of the following will render to the output on the right?
-:::
-
-:::columns
-:::{.column width=37%}
-[A]{.smallcaps}
-```markdown
-1. I has a sandwich.
-
-   It was deliicous.
-
-1. I had coffee.
-
-   It gave me joy.
-```
-
-[C]{.smallcaps}
-```markdown
-1. I has a sandwich.
-It was deliicous.
-
-2. I had coffee.
-It gave me joy.
-```
-:::
-
-:::{.column width=37%}
-[B]{.smallcaps}
-```markdown
-1. I has a sandwich.
-  It was deliicous.
-
-2. I had coffee.
-  It gave me joy.
-```
-
-[D]{.smallcaps}
-```markdown
-1. I has a sandwich.
-
-    It was deliicous.
-
-2. I had coffee.
-
-    It gave me joy.
-```
-:::
-
-:::{.column width=26%}
-#### Output
-
-1. I has a sandwich.
-
-   It was deliicous.
-
-2. I had coffee.
-
-   It gave me joy.
-:::
-:::
-
-## [Block Elements:]{.block-el} Lists (blocks in lists)
-
-> A list item may contain multiple paragraphs and other block-level content. Subsequent block elements must be preceded by a blank line and indented to line up with the first non-space content after the list marker. -- the Pandoc Docs
-
-::: columns
-::: {.column width="50%"}
-#### Markdown
-
-```markdown
-1. First item...
-
-   ...Continued.
-
-1. Second item
-
-   # header
-
-1. Third item
-```
-:::
-
-::: {.column width="50%"}
-#### Output
-
-1. First item...
-
-   ...Continued.
-
-1. Second item
-
-   # header
-
-1. Third item
-:::
-:::
-
-
-## [Block Elements:]{.block-el} Lists (example lists)
-
-> The first list item with a `@` marker will be numbered 1., the next 2., etc. The numbered examples need not occur in a single list; each new list using `@` will take up where the last stopped. -- the Pandoc Docs
-
-::: columns
-::: {.column width="50%"}
-#### Markdown
-
-```markdown
-(@)  The first example.
-(@)  The second example.
-
-Explanation of examples.
-
-(@)  The third example.
-```
-:::
-
-::: {.column width="50%"}
-#### Output
-
-(@)  The first example.
-(@)  The second example.
-
-Explanation of examples.
-
-(@)  The third example.
-:::
-:::
-
-> You can also label your examples: `(@goodname)`.
-
-
-## [Block Elements:]{.block-el} Images
-
-Block images use the same syntax as inline images.
-
-::: columns
-::: {.column width="55%"}
-#### Markdown
-
-```markdown
-Images are a block element...
-
-![Elephant](images/elephant.png)
-
-or are they?
-```
-:::
-
-::: {.column width="45%" .fragment}
-#### Output
-
-Images are a block element...
-
-![Elephant](images/elephant.png){width="20%"}
-
-or are they?
-:::
-:::
-
-::: {.fragment .fade-left style="position: absolute; width: 800px; top: 450px; left: 350px"}
-![](images/elephant-html.png){.drop fig-alt="Screenshot of html output showing the image inside a paragraph block."}
-:::
-
-::: {.fragment .fade-left style="position: absolute; width: 650px; top: 400px; left: 400px"}
-![](images/elephant-latex.png){.drop fig-alt="Screenshot of latex output showing the image inside a figure environment"}
-:::
-
-. . .
-
-[Images behave mostly like inline elements but actually live in a block (e.g. a paragraph). Their behavior depends on output format.]{style="font-size: .8em"}
-
-
-
-## Your Turn {.your-turn style="font-size: .9em"}
-
-Your goal is to create from scratch the beautiful documents `3-markdown-goal.html` and `3-markdown-goal.pdf`. Add into `3-markdown.qmd` the markdown syntax needed to create the various inline and block elements found in the output documents.
-
-\
-
-::: {layout-ncol="4"}
-
-\
-
-#### Inline
-- text formatting
-- math
-- links and images
-- footnotes
-
-#### Block
-- paragraphs
-- headers
-- lists
-- math
-- images
-
-\
-
-:::
-
-```{r}
-#| echo: false
-countdown::countdown(10)
-```
-
-:::aside
-For reference, see: <https://pandoc.org/MANUAL.html#pandocs-markdown>
-:::
-
-# Code Cells
-
-##  {data-menu-title="Computation in Quarto"}
-
-![](images/quarto-workshop-13.jpg){fig-align="center"}
-
-
-## Pandoc's Fenced Code Block
-
-Sandwich the code between "fences" of at least three backticks[^1]. An optional language provides syntax highlighting.
-
-[^1]: Pandoc also allows `~~~`
-
-::: columns
-::: {.column width=50%}
-```` markdown
-```cobol
-1 + 1
-```
-````
-:::
-
-::: {.column .fragment width=50%}
--   Useful for **displaying** source code, not running it
--   Note that the language is not in `{ }`
--   Pandoc supports 140 languages!
-:::
-:::
-
-## R Markdown's Code Chunk
+## Quarto's Code Chunk
 
 ::: columns
 ::: {.column width=25%}
 :::
 
 ::: {.column width=50%}
-    ```{{r, echo=FALSE}}
-    rnorm(3)
-    ```
-:::
-
-::: {.column width=25%}
-:::
-:::
-
-. . .
-
-\
-
-::: poll
-{{< fa brands discord >}} What syntax is being used in `echo=FALSE`?
-
-1.  HTML
-2.  Pandoc attribute syntax
-3.  YAML
-4.  CSS
-5.  R
-:::
-
-## Generalizing the Code Chunk {auto-animate="true"}
-
-How can this be generalized to other languages?
-
-::: columns
-::: {.column width="50%"}
-    ```{{r, echo=FALSE}}
-    rnorm(3)
-    ```
-:::
-
-::: {.column width="50%"}
--   Executable code flagged by `{ }`
-:::
-:::
-
-## Generalizing the Code Chunk {auto-animate="true"}
-
-How can this be generalized to other languages?
-
-::: columns
-::: {.column width="50%"}
-    ```{{language, echo=FALSE}}
-    code
-    ```
-:::
-
-::: {.column width="50%"}
--   Executable code flagged by `{ }`
--   Support R, Python, Julia
--   Also support `mermaid` and `dot` diagram languages[^3].
-:::
-:::
-
-[^3]: See <https://quarto.org/docs/authoring/diagrams.html>.
-
-## Generalizing the Code Chunk {auto-animate="true"}
-
-How can this be generalized to other languages?
-
-::: columns
-::: {.column width="50%"}
-    ```{{language}}
+    ```{{r}}
     #| echo: false
-
-    code
+    rnorm(3)
     ```
 :::
 
-::: {.column width="50%"}
--   Executable code flagged by `{ }`
--   Support R, Python, Julia
--   Also support `mermaid` and `dot` diagram languages[^3]
--   Cell options live as YAML inside the cell after `#|` (the hash pipe!)[^4]
+::: {.column width=25%}
+:::
+:::
 
 ::: fragment
-[**This is a Quarto Code Cell.**]{style="color: green;font-size: 1.2em"}
-:::
-:::
+[**This is a Quarto Code Chunk.**]{style="color: green;font-size: 1.2em"}
 :::
 
-[^3]: See <https://quarto.org/docs/authoring/diagrams.html>.
+## Let's explore the survey data {.our-turn}
 
-[^4]: The hash pipe is available in the R Markdown too.
 
-## The Perks of the Hashpipe `#|`
 
-::: {.fragment style="margin-left: 20px; white-space: nowrap"}
-1.  Line breaks prevent chunk options that go on `{r, and=on, and=on, and=on, and=on, and=on, and=on}`{style="white-space: nowrap"}
-:::
-
-::: {.fragment style="margin-left: 20px"}
-2.  Chunk options are now pan-language with `<commentchar>|`.
+## Quarto's Code Chunk {.your-turn}
 
 ::: columns
-::: {.column width="50%"}
-````markdown
-```{{python}}
-#| echo: false
-```
-````
+::: {.column width=25%}
 :::
 
-::: {.column width="50%"}
-````markdown
-```{{mermaid}}
-%%| echo: false
-```
-````
+::: {.column width=50%}
+    ```{{r}}
+    #| echo: false
+    rnorm(3)
+    ```
 :::
+
+::: {.column width=25%}
 :::
 :::
 
-::: {.fragment style="margin-left: 20px; white-space: nowrap"}
-3.  No more yelling! (`eval=FALSE`)
-:::
+
+[**This is a Quarto Code Chunk.**]{style="color: green;font-size: 1.2em"}
+
+Make a new code chunk in three ways:
+
+1. Type it out 
+2. got to Code -> Insert Chunk on the top menu
+3. click in your document and hit the key combination `Alt+Ctrl+i`
+
+Write a math expression in a chunk and press the green arrow at the top-right of the chunk.
 
 ## Execution Options
 
-Control how the code is executed with options.
+Control how the code is executed with options.  
+Options are denoted with the "hash-pipe" `#|`
 
 ::: {style="font-size: .8em"}
 | Option    | Description                                                                                                                                                                                       |
@@ -1074,156 +476,6 @@ Control how the code is executed with options.
 | `error`   | Include errors in the output.                                                                                                                                                                     |
 | `include` | Catch all for preventing any output (code or results) from being included (e.g. `include: false` suppresses all output from the code block).                                                      |
 :::
-
-## Setting `knitr` options
-
-The `knitr` syntax for passing options still works since Quarto uses `knitr`.
-
-::: columns
-::: {.column width="50%"}
-#### Source
-
-````markdown
-```{{r, error=TRUE}}
-#| echo: true
-
-rnorm(5       # this is missing a parens
-```
-````
-:::
-
-::: {.column .fragment width="50%"}
-#### Output
-
-```{r, error=TRUE}
-#| echo: true
-
-rnorm(5       # this is missing a parens
-```
-:::
-:::
- 
-. . .
-
-> While it's possible to use R chunks options, hash pipe options are more portable across computational engines.
-
-::: aside
-Without `error=TRUE`, this would error out on rendering and produce no output.
-:::
-
-##  {menu-title="YAML Intelligence" style="text-align: center"}
-
-\
-
-[Don't forget to use tab-completion to see the available options!]{style="align: center"}
-
-\
-
-![](images/code-yaml-intelligence.png){.drop width="100px"}
-
-## From Cell Option to YAML {auto-animate=true}
-
-:::columns
-:::{.column width=50%}
-````{.markdown code-line-numbers="7"}
----
-title: My Doc
-format: html
----
-
-```{{r}}
-#| echo: true
-
-pi + 1
-```
-````
-:::
-:::
-
-## From Cell Option to YAML {auto-animate=true}
-
-:::columns
-:::{.column width=50%}
-````{.markdown code-line-numbers="4,5"}
----
-title: My Doc
-format: html
-execute:
-  echo: true
----
-
-```{{r}}
-pi + 1
-```
-````
-:::
-:::{.column width=50%}
-- Options can be moved into YAML under the `execute` key to apply to all chunks. Exceptions to that option can be set cell-by-cell.
-:::
-:::
-
-## From Cell Option to YAML {auto-animate=true}
-
-:::columns
-:::{.column width=50%}
-````{.markdown code-line-numbers="6-8"}
----
-title: My Doc
-format: html
-execute:
-  echo: true
-knitr:
-  opts_chunk: 
-    collapse: true
----
-
-```{{r}}
-pi + 1
-```
-````
-:::
-:::{.column width=50%}
-- Options can be moved into YAML under the `execute` key to apply to all chunks. Exceptions to that option can be set cell-by-cell.
-
-- You can also pass options via YAML to knitr through the `knitr` key[^setup].
-:::
-:::
-
-[^setup]: No more ````{r setup}` :tada:
-
-
-## From Cell Option to YAML {auto-animate=true}
-
-:::columns
-:::{.column width=50%}
-````{.markdown code-line-numbers="9-10"}
----
-title: My Doc
-format: html
-execute:
-  echo: true
-knitr:
-  opts_chunk: 
-    collapse: true
-    R.options:
-      digits: 2
----
-
-```{{r}}
-pi + 1
-```
-````
-:::
-:::{.column width=50%}
-- Options can be moved into YAML under the `execute` key to apply to all chunks. Exceptions to that option can be set cell-by-cell.
-
-- You can also pass options via YAML to knitr through the `knitr` key[^setup].
-
-- You can use knitr to pass options that control your R session.
-:::
-:::
-
-[^setup]: No more ````{r setup}` :tada:
 
 ## Example: Figures from Code {auto-animate=true}
 
@@ -1297,73 +549,158 @@ ggplot(penguins,
 :::
 :::
 
-. . .
 
-> Save time/code by moving figure sizing defaults up to the YAML.
+# Text
 
+[The Basics of Markdown]{style="font-family: 'Nanum Myeongjo', serif; font-size:1.7em"}
 
+##  {data-menu-title="Markdown is for writing"}
 
-## Your turn {.your-turn}
-
-::: task
--   Open `3-code-cells.qmd` and render the document.
--   Add `echo: false` to the code cell and re-render.
--   Add 2 more cell options by using  Ctrl + Space after the `#|` or consult the [Quarto Reference](https://quarto.org/docs/reference/cells/cells-knitr.html).
--   Add a second code cell (you can copy + paste the first), move your cell options to the YAML, and re-render.
--   Please share your favorite code cell option on {{< fa brands discord >}}.
+::: {style="font-size: 4em; text-align: center; color: green"}
+{{< fa brands markdown >}}
 :::
 
-```{r}
-countdown(minutes = 7)
-```
+-   Markdown is designed to be easy to write and easy to read:
 
-
-## Questions
-
-::: poll
-Any questions / anything you'd like to review before we wrap up this module?
-:::
-
-## One last thing!
-
-::: task
-Where does the name "Quarto" come from?
-:::
+    > A Markdown-formatted document should be publishable as-is, as plain text, without looking like it's been marked up with tags or formatting instructions.\
+    > -John Gruber
 
 . . .
 
+- Quarto uses extended version of **Pandoc markdown**.
+- Pandoc classifies markdown in terms of [Inline]{.inline-el} and [Block]{.block-el} elements.
 
-:::{style="text-align: center"}
-```{=html}
-<iframe src="https://en.wikipedia.org/wiki/Quarto" title = "Quarto on Wikipedia" frameborder="1" height="600" width="1300" style="border: 1px solid black"></iframe>
+
+## [Inline Elements:]{.inline-el} Text Formatting
+
+::: columns
+::: {.column width="65%"}
+#### Markdown
+
+```{.markdown}
+Markdown allows you to format text
+with *emphasis* and **strong emphasis**.
+You can also add superscripts^2^, 
+subscripts~2~, and display code 
+`verbatim`. Little known fact: you can 
+also ~~strikethrough~~ text and present
+it in [small caps]{.smallcaps}.
 ```
 :::
 
-::: aside
-Source: <https://en.wikipedia.org/wiki/Quarto>
+::: {.column width="35%" .fragment}
+#### Output
+
+Markdown allows you to format text with *emphasis* and **strong emphasis**. You can also add superscripts^2^, subscripts~2~, and display code `verbatim`. Little known fact: you can also ~~strikethrough~~ text and present it in [small caps]{.smallcaps}.
+:::
 :::
 
-# Let's take a break!
-
-\
-\
-
-:::{style="text-align: center"}
-![](https://i.gifer.com/A7YM.gif)
+::: footer
+^[Either the `*` or `_` can be used for emphasis and strong.]
 :::
 
-```{r}
-#| echo: false
-countdown::countdown(30)
+
+## [Inline Elements:]{.inline-el} Links and Images
+
+#### Markdown
+
+```markdown
+You can embed [links with names](https://quarto.org/), direct urls
+like <https://quarto.org/>, and links to 
+[other places](#inline-elements-text-formatting) in the document. 
+The syntax is similar for embedding an inline image:
+![render icon](images/render-icon.png).
 ```
 
+\
+
+:::{.fragment}
+#### Output
+
+You can embed [links with names](https://quarto.org/), direct urls like <https://quarto.org/>, and links to [other places](#inline-elements-text-formatting) in the document. The syntax is similar for embedding an inline image: ![render icon](images/render-icon.png){fig-alt="small icon of render arrow" width="100"}.
+:::
+
+## Markdown can do so much more
+
+To learn about footnotes, Math, tables, and diagrams, check out the [quarto documentation on markdown](https://quarto.org/docs/authoring/markdown-basics.html)
 
 
+::: columns
+::: {.column width="50%" .fragment}
+#### Markdown
 
-## References and further reading {.smaller}
+```markdown
+A short note.^[Fits inline.]
 
-- [A Brief History of R Markdown](https://slides.yihui.org/2021-Brazilian-R-Day.html): a presentation by Yihui Xie in 2021.
-- [Pandoc documentation on type references](https://pandoc.org/lua-filters.html#lua-type-reference): this section documents the tools needed to write Lua filters but included in this is a compendium of the different block and inline elements recognized by pandoc.
-- [Block and Inline Elements](https://info340.github.io/html-fundamentals.html#block-vs.-inline-elements): from Client-side Web Development by Ross and Freeman. Provides clear description of elements in the setting of HTML.
-- [Command Line Essentials](https://datacarpentry.org/shell-genomics/02-the-filesystem/index.html): a short primer on how to navigate through a file structure at the command line.sla
-- [Spatial Logical Toy](https://patents.google.com/patent/US4378116A/en): The US patent of what became the Rubik's Cube. Several examples in these slides borrow figures and text from the patent.
+|        |  1   |  2   |
+|--------|------|------|
+| **A**  | 0    | 0    |
+: example table {#tbl-1}
+
+$$
+f(x)={\sqrt{\frac{\tau}{2\pi}}}
+      e^{-\tau (x-\mu )^{2}/2}
+$$
+
+```
+:::
+
+::: {.column width="50%" .fragment}
+#### Output
+
+A short note.^[Fits inline.]
+
+|        |  1   |  2   |
+|--------|------|------|
+| **A**  | 0    | 0    |
+: example table {#tbl-1}
+
+$$
+f(x)=\sqrt{\frac{\tau}{2\pi}}
+    e^{-\tau (x-\mu )^{2}/2}
+$$
+:::
+:::
+
+
+## [Metadata:]{.meta-el} YAML
+
+"Yet Another Markup Language" or "YAML Ain't Markup Language" is used to provide document level metadata ...
+
+:::columns
+
+:::{.column width=10%}
+:::
+
+:::{.column width=50%}
+[... in key-value pairs,]
+
+[... that can nest,]
+
+[... are fussy about indentation,]
+
+[... and are kept between `---`.]
+
+:::
+
+:::{.column width=40% .fragment}
+
+\
+
+``` yaml
+---
+format: 
+  title: "Intro to R"
+  author: "Yours Truly"
+  html:
+    toc: true
+    code-fold: true
+---
+```
+:::
+
+:::
+
+[There are many options for [front matter](https://quarto.org/docs/authoring/front-matter.html) and [configuring rendering](https://quarto.org/docs/reference/formats/html.html).]{.fragment}
+
+# Quarto + RStudio  =<br>analysis code, documentation, and interpretation combined.
