--- a/resources.qmd
+++ b/resources.qmd
@@ -1,7 +1,11 @@
 ---
 title: "Resources"
-sidebar: false
 ---
+
+## Before the workshop: Installing R and RStudio
+
+Please install R and RStudio on your laptop. If you already have R and Rstudio installed, please make sure they are up-to date. Please install `R version 4.3.1` and `RStudio version 2023.09.0` [Click here for instructions on installing R and RStudio](installation-instructions.qmd)
+
 
 ## Textbooks  
 ![](images/R_for_data_science.png){fig-align="left" width=15%}  
